--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <style>
+    <!-- <style>
         table {
           border-collapse: collapse;
           width: 100%;
@@ -12,7 +12,7 @@
         tr {
           border-bottom: 1px solid #ddd;
         }
-        </style>
+        </style> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
